--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "tslint -t stylish --project tsconfig.json",
     "lint:fix": "npm run lint -- --fix",
     "check": "npm run lint && npm run prettier:check",
-    "prettier:base-files": "prettier --single-quote --trailing-comma es5 ./**/*.ts",
+    "prettier:base-files": "prettier --single-quote --trailing-comma es5 './**/*.ts'",
     "prettier:check": "npm run prettier:base-files -- -l",
     "prettier:fix": "npm run prettier:base-files -- --write",
     "semantic-release": "semantic-release"
@@ -41,7 +41,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook",
-      "post-merge": "npm install"
+      "post-merge": "npm ci"
     }
   },
   "lint-staged": {
