build(npm i): replace npm ci with npm install for post-merge hook
n

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook",
-      "post-merge": "npm ci"
+      "post-merge": "npm install"
     }
   },
   "lint-staged": {
